fix spacing

--- a/css/contribute.css
+++ b/css/contribute.css
@@ -32,8 +32,8 @@
 
 .inputContainer {
     height: 35px;
-    width: 100%;
-    margin: 0px 10px 0px 10px;
+    width: calc(100% - 20px);
+    margin: 10px;
     border-radius: 3px;
 }
 
